// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`client/messaging/common-message-layout/TextMessage > message as a normal text 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-bzPltN hUEqOG"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-ciFRHr iWHehs"
      tabindex="0"
    >
      <span
        class="sc-kHdsLW VmVdC"
      >
        <i
          aria-hidden="true"
          class="sc-kJpDiM hlKTeR"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-kJpDiM hlKTeR"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-dUbsrE ePtLXP sc-gJbHHB fWreqg"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-htJSJb fkOQZi"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-kJpDiM hlKTeR"
    >
      : 
    </i>
    <span
      class="sc-eJRUsT gaIrIZ"
    >
      This is test message
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message mixing emoji and text renders them inline-sized 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-bzPltN hUEqOG"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-ciFRHr iWHehs"
      tabindex="0"
    >
      <span
        class="sc-kHdsLW VmVdC"
      >
        <i
          aria-hidden="true"
          class="sc-kJpDiM hlKTeR"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-kJpDiM hlKTeR"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-dUbsrE ePtLXP sc-gJbHHB fWreqg"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-htJSJb fkOQZi"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-kJpDiM hlKTeR"
    >
      : 
    </i>
    <span
      class="sc-eJRUsT gaIrIZ"
    >
      nice game 
      <div
        class="sc-fotPuT jrxelZ sc-ckSceh gEdQyV"
        tabindex="-1"
      >
        <span
          class="sc-gfqkQm XjgxH"
        >
          🔥
        </span>
      </div>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message sent as an emote reads as an action line 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-bzPltN hUEqOG"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-ciFRHr iWHehs"
      tabindex="0"
    >
      <span
        class="sc-kHdsLW VmVdC"
      >
        <i
          aria-hidden="true"
          class="sc-kJpDiM hlKTeR"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-kJpDiM hlKTeR"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-iidAxk hsvqwH"
    >
      * 
    </span>
    <span
      class="sc-dUbsrE ePtLXP sc-gJbHHB sc-dYPdIz fWreqg eTkchd"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-htJSJb fkOQZi"
      >
                   
      </span>
    </span>
     
    <span
      class="sc-eJRUsT sc-eVlYoy gaIrIZ kOTWYF"
    >
      waves at everyone
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a link 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-bzPltN hUEqOG"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-ciFRHr iWHehs"
      tabindex="0"
    >
      <span
        class="sc-kHdsLW VmVdC"
      >
        <i
          aria-hidden="true"
          class="sc-kJpDiM hlKTeR"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-kJpDiM hlKTeR"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-dUbsrE ePtLXP sc-gJbHHB fWreqg"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-htJSJb fkOQZi"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-kJpDiM hlKTeR"
    >
      : 
    </i>
    <span
      class="sc-eJRUsT gaIrIZ"
    >
      here is a link 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a link before a mention 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-bzPltN hUEqOG"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-ciFRHr iWHehs"
      tabindex="0"
    >
      <span
        class="sc-kHdsLW VmVdC"
      >
        <i
          aria-hidden="true"
          class="sc-kJpDiM hlKTeR"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-kJpDiM hlKTeR"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-dUbsrE ePtLXP sc-gJbHHB fWreqg"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-htJSJb fkOQZi"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-kJpDiM hlKTeR"
    >
      : 
    </i>
    <span
      class="sc-eJRUsT gaIrIZ"
    >
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="sc-dUbsrE ePtLXP sc-fGoOYS fMqMtD"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-htJSJb fkOQZi"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a link between mentions 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-bzPltN hUEqOG"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-ciFRHr iWHehs"
      tabindex="0"
    >
      <span
        class="sc-kHdsLW VmVdC"
      >
        <i
          aria-hidden="true"
          class="sc-kJpDiM hlKTeR"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-kJpDiM hlKTeR"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-dUbsrE ePtLXP sc-gJbHHB fWreqg"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-htJSJb fkOQZi"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-kJpDiM hlKTeR"
    >
      : 
    </i>
    <span
      class="sc-eJRUsT gaIrIZ"
    >
      hey
       
      <span
        class="sc-dUbsrE ePtLXP sc-fGoOYS fMqMtD"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-htJSJb fkOQZi"
        >
                     
        </span>
      </span>
       see 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="sc-dUbsrE ePtLXP sc-fGoOYS fMqMtD"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-htJSJb fkOQZi"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-bzPltN hUEqOG"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-ciFRHr iWHehs"
      tabindex="0"
    >
      <span
        class="sc-kHdsLW VmVdC"
      >
        <i
          aria-hidden="true"
          class="sc-kJpDiM hlKTeR"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-kJpDiM hlKTeR"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-dUbsrE ePtLXP sc-gJbHHB fWreqg"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-htJSJb fkOQZi"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-kJpDiM hlKTeR"
    >
      : 
    </i>
    <span
      class="sc-eJRUsT gaIrIZ"
    >
      hey
       
      <span
        class="sc-dUbsrE ePtLXP sc-fGoOYS fMqMtD"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-htJSJb fkOQZi"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention before a link 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-bzPltN hUEqOG"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-ciFRHr iWHehs"
      tabindex="0"
    >
      <span
        class="sc-kHdsLW VmVdC"
      >
        <i
          aria-hidden="true"
          class="sc-kJpDiM hlKTeR"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-kJpDiM hlKTeR"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-dUbsrE ePtLXP sc-gJbHHB fWreqg"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-htJSJb fkOQZi"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-kJpDiM hlKTeR"
    >
      : 
    </i>
    <span
      class="sc-eJRUsT gaIrIZ"
    >
      <span
        class="sc-dUbsrE ePtLXP sc-fGoOYS fMqMtD"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-htJSJb fkOQZi"
        >
                     
        </span>
      </span>
       go to 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention between links 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-bzPltN hUEqOG"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-ciFRHr iWHehs"
      tabindex="0"
    >
      <span
        class="sc-kHdsLW VmVdC"
      >
        <i
          aria-hidden="true"
          class="sc-kJpDiM hlKTeR"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-kJpDiM hlKTeR"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-dUbsrE ePtLXP sc-gJbHHB fWreqg"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-htJSJb fkOQZi"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-kJpDiM hlKTeR"
    >
      : 
    </i>
    <span
      class="sc-eJRUsT gaIrIZ"
    >
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="sc-dUbsrE ePtLXP sc-fGoOYS fMqMtD"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-htJSJb fkOQZi"
        >
                     
        </span>
      </span>
       or here 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention of self user 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-bzPltN fBfBCx"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-ciFRHr iWHehs"
      tabindex="0"
    >
      <span
        class="sc-kHdsLW VmVdC"
      >
        <i
          aria-hidden="true"
          class="sc-kJpDiM hlKTeR"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-kJpDiM hlKTeR"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-dUbsrE ePtLXP sc-gJbHHB fWreqg"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-htJSJb fkOQZi"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-kJpDiM hlKTeR"
    >
      : 
    </i>
    <span
      class="sc-eJRUsT gaIrIZ"
    >
      Hey
       
      <span
        class="sc-dUbsrE ePtLXP sc-fGoOYS fMqMtD"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-htJSJb fkOQZi"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with only emoji renders them jumbo-sized 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-bzPltN hUEqOG"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-ciFRHr iWHehs"
      tabindex="0"
    >
      <span
        class="sc-kHdsLW VmVdC"
      >
        <i
          aria-hidden="true"
          class="sc-kJpDiM hlKTeR"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-kJpDiM hlKTeR"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-dUbsrE ePtLXP sc-gJbHHB fWreqg"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-htJSJb fkOQZi"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-kJpDiM hlKTeR"
    >
      : 
    </i>
    <span
      class="sc-eJRUsT gaIrIZ"
    >
      <div
        class="sc-fotPuT jrxelZ sc-ckSceh gEdQyV"
        tabindex="-1"
      >
        <span
          class="sc-gfqkQm gIfSVA"
        >
          🔥
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-ckSceh gEdQyV"
        tabindex="-1"
      >
        <span
          class="sc-gfqkQm gIfSVA"
        >
          🔥
        </span>
      </div>
       
      <div
        class="sc-fotPuT jrxelZ sc-ckSceh gEdQyV"
        tabindex="-1"
      >
        <span
          class="sc-gfqkQm gIfSVA"
        >
          🎉
        </span>
      </div>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with too many emoji for jumbo stays inline-sized 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-bzPltN hUEqOG"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-ciFRHr iWHehs"
      tabindex="0"
    >
      <span
        class="sc-kHdsLW VmVdC"
      >
        <i
          aria-hidden="true"
          class="sc-kJpDiM hlKTeR"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-kJpDiM hlKTeR"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-dUbsrE ePtLXP sc-gJbHHB fWreqg"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-htJSJb fkOQZi"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-kJpDiM hlKTeR"
    >
      : 
    </i>
    <span
      class="sc-eJRUsT gaIrIZ"
    >
      <div
        class="sc-fotPuT jrxelZ sc-ckSceh gEdQyV"
        tabindex="-1"
      >
        <span
          class="sc-gfqkQm XjgxH"
        >
          😀
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-ckSceh gEdQyV"
        tabindex="-1"
      >
        <span
          class="sc-gfqkQm XjgxH"
        >
          😀
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-ckSceh gEdQyV"
        tabindex="-1"
      >
        <span
          class="sc-gfqkQm XjgxH"
        >
          😀
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-ckSceh gEdQyV"
        tabindex="-1"
      >
        <span
          class="sc-gfqkQm XjgxH"
        >
          😀
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-ckSceh gEdQyV"
        tabindex="-1"
      >
        <span
          class="sc-gfqkQm XjgxH"
        >
          😀
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-ckSceh gEdQyV"
        tabindex="-1"
      >
        <span
          class="sc-gfqkQm XjgxH"
        >
          😀
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-ckSceh gEdQyV"
        tabindex="-1"
      >
        <span
          class="sc-gfqkQm XjgxH"
        >
          😀
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-ckSceh gEdQyV"
        tabindex="-1"
      >
        <span
          class="sc-gfqkQm XjgxH"
        >
          😀
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-ckSceh gEdQyV"
        tabindex="-1"
      >
        <span
          class="sc-gfqkQm XjgxH"
        >
          😀
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-ckSceh gEdQyV"
        tabindex="-1"
      >
        <span
          class="sc-gfqkQm XjgxH"
        >
          😀
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-ckSceh gEdQyV"
        tabindex="-1"
      >
        <span
          class="sc-gfqkQm XjgxH"
        >
          😀
        </span>
      </div>
    </span>
  </div>
</div>
`;
